# w2v-to-attention

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  script.md
w2v-1/: main.py  script.md
