[project]
name = "w2v-to-attention"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "manim>=0.19.0",
    "manim-voiceover[azure,gtts]>=0.3.7",
    "setuptools>=76.0.0",
    "scipy>=1.11.0",
    "ffmpeg-python>=0.2.0",
]
